.k8s/rocm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: ""
    openshift.io/requester: kube:admin
    openshift.io/sa.scc.mcs: s0:c27,c14
    openshift.io/sa.scc.supplemental-groups: 1000730000/10000
    openshift.io/sa.scc.uid-range: 1000730000/10000
    security.openshift.io/MinimallySufficientPodSecurityStandard: privileged
  creationTimestamp: "2025-11-01T23:04:18Z"
  labels:
    kubernetes.io/metadata.name: gpt-oss
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
  name: gpt-oss
  resourceVersion: "116309"
  uid: 0609aaa2-5396-4f6f-ae6d-17be97a1b114
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
